--- a/data/cards/05309481.yaml
+++ b/data/cards/05309481.yaml
@@ -58,24 +58,45 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLCR-EN082
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: CSOC-DE044
     set_name: Crossroads of Chaos
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLCR-DE082
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: CSOC-FR044
     set_name: Crossroads of Chaos
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLCR-FR082
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: CSOC-IT044
     set_name: Crossroads of Chaos
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLCR-IT082
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT082
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: CSOC-JP044
     set_name: Crossroads of Chaos
