--- a/data/cards/24361622.yaml
+++ b/data/cards/24361622.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN090
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DUPO-DE027
     set_name: Duel Power
@@ -69,6 +73,10 @@ sets:
     - Ultra Rare
   - set_number: GFTP-DE053
     set_name: Ghosts From the Past (set)
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-DE090
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   fr:
@@ -80,6 +88,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR090
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DUPO-IT027
     set_name: Duel Power
@@ -89,6 +101,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT090
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DUPO-PT027
     set_name: Duel Power
@@ -96,6 +112,10 @@ sets:
     - Ultra Rare
   - set_number: GFTP-PT053
     set_name: Ghosts From the Past (set)
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-PT090
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   ja:
