--- a/data/cards/26873574.yaml
+++ b/data/cards/26873574.yaml
@@ -49,30 +49,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN071
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TOCH-DE007
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-DE071
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TOCH-FR007
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-FR071
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TOCH-IT007
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-IT071
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TOCH-PT007
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-PT071
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: WPP1-JP012
     set_name: World Premiere Pack 2020
