--- a/data/cards/26973555.yaml
+++ b/data/cards/26973555.yaml
@@ -69,30 +69,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN085
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: KICO-DE013
     set_name: King's Court
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-DE085
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: KICO-FR013
     set_name: King's Court
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-FR085
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: KICO-IT013
     set_name: King's Court
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-IT085
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: KICO-PT013
     set_name: King's Court
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-PT085
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: LGB1-JP025
     set_name: Legendary Gold Box
