--- a/data/cards/34755994.yaml
+++ b/data/cards/34755994.yaml
@@ -58,30 +58,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN095
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: GEIM-DE008
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-DE095
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: GEIM-FR008
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-FR095
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: GEIM-IT008
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-IT095
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: GEIM-PT008
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-PT095
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DBGI-JP008
     set_name: 'Deck Build Pack: Genesis Impactors'
