--- a/data/cards/34773082.yaml
+++ b/data/cards/34773082.yaml
@@ -47,6 +47,10 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN086
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SOFU-DE099
     set_name: Soul Fusion
@@ -54,6 +58,10 @@ sets:
     - Rare
   - set_number: DUPO-DE067
     set_name: Duel Power
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-DE086
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   fr:
@@ -65,6 +73,10 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR086
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SOFU-IT099
     set_name: Soul Fusion
@@ -74,6 +86,10 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT086
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SOFU-PT099
     set_name: Soul Fusion
@@ -81,6 +97,10 @@ sets:
     - Rare
   - set_number: DUPO-PT067
     set_name: Duel Power
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-PT086
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   ja:
