--- a/data/cards/43534808.yaml
+++ b/data/cards/43534808.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: BLCR-EN079
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SOFU-DESP1
     set_name: Soul Fusion Sneak Peek Participation Card
@@ -74,6 +78,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: BLCR-DE079
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SOFU-FRSP1
     set_name: Soul Fusion Sneak Peek Participation Card
@@ -91,6 +99,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: BLCR-FR079
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SOFU-ITSP1
     set_name: Soul Fusion Sneak Peek Participation Card
@@ -108,6 +120,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: BLCR-IT079
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SOFU-PTSP1
     set_name: Soul Fusion Sneak Peek Participation Card
@@ -125,6 +141,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Super Rare
+  - set_number: BLCR-PT079
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SOFU-JP031
     set_name: Soul Fusion
