--- a/data/cards/52947044.yaml
+++ b/data/cards/52947044.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLCR-EN088
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: DANE-DE054
     set_name: Dark Neostorm
@@ -64,6 +68,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLCR-DE088
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: DANE-FR054
     set_name: Dark Neostorm
@@ -77,6 +85,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLCR-FR088
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: DANE-IT054
     set_name: Dark Neostorm
@@ -90,6 +102,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLCR-IT088
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: DANE-PT054
     set_name: Dark Neostorm
@@ -103,6 +119,10 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLCR-PT088
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DANE-JP054
     set_name: Dark Neostorm
