--- a/data/cards/53094821.yaml
+++ b/data/cards/53094821.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Toon Chaos
     rarities:
     - Super Rare
+  - set_number: BLCR-EN069
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TOCH-DE005
     set_name: Toon Chaos
     rarities:
     - Super Rare
+  - set_number: BLCR-DE069
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TOCH-FR005
     set_name: Toon Chaos
     rarities:
     - Super Rare
+  - set_number: BLCR-FR069
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TOCH-IT005
     set_name: Toon Chaos
     rarities:
     - Super Rare
+  - set_number: BLCR-IT069
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TOCH-PT005
     set_name: Toon Chaos
     rarities:
     - Super Rare
+  - set_number: BLCR-PT069
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: WPP1-JP005
     set_name: World Premiere Pack 2020
