--- a/data/cards/64116319.yaml
+++ b/data/cards/64116319.yaml
@@ -49,30 +49,50 @@ sets:
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-EN066
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TOCH-DE002
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-DE066
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TOCH-FR002
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-FR066
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TOCH-IT002
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-IT066
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TOCH-PT002
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-PT066
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: WPP1-JP002
     set_name: World Premiere Pack 2020
