--- a/data/cards/72714392.yaml
+++ b/data/cards/72714392.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: BLCR-EN060
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: ANPR-DE005
     set_name: Ancient Prophecy
@@ -69,6 +73,10 @@ sets:
     - Super Rare
   - set_number: LC5D-DE118
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Secret Rare
+  - set_number: BLCR-DE060
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Secret Rare
   fr:
@@ -85,6 +93,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: BLCR-FR060
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: ANPR-IT005
     set_name: Ancient Prophecy
@@ -99,9 +111,17 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: BLCR-IT060
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: LC5D-PT118
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Secret Rare
+  - set_number: BLCR-PT060
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Secret Rare
   ja:
