--- a/data/cards/80621422.yaml
+++ b/data/cards/80621422.yaml
@@ -56,9 +56,17 @@ sets:
     set_name: Eternity Code
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN089
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: ETCO-DE089
     set_name: Eternity Code
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-DE089
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   fr:
@@ -66,14 +74,26 @@ sets:
     set_name: Eternity Code
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR089
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: ETCO-IT089
     set_name: Eternity Code
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT089
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: ETCO-PT089
     set_name: Eternity Code
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-PT089
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   ja:
