--- a/data/cards/81470373.yaml
+++ b/data/cards/81470373.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN062
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LED3-DE024
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -58,6 +62,10 @@ sets:
     - Super Rare
   - set_number: LDS2-DE040
     set_name: 'Legendary Duelists: Season 2'
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-DE062
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   fr:
@@ -69,6 +77,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR062
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LED3-IT024
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -78,6 +90,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT062
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED3-PT024
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -85,6 +101,10 @@ sets:
     - Super Rare
   - set_number: LDS2-PT040
     set_name: 'Legendary Duelists: Season 2'
+    rarities:
+    - Ultra Rare
+  - set_number: BLCR-PT062
+    set_name: 'Battles of Legend: Crystal Revenge'
     rarities:
     - Ultra Rare
   ja:
