--- a/data/cards/89258906.yaml
+++ b/data/cards/89258906.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: BLCR-EN061
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TSHD-DE003
     set_name: The Shining Darkness
@@ -62,6 +66,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: BLCR-DE061
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TSHD-FR003
     set_name: The Shining Darkness
@@ -72,6 +80,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: BLCR-FR061
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TSHD-IT003
     set_name: The Shining Darkness
@@ -82,11 +94,19 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: BLCR-IT061
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LC5D-PT122
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: BLCR-PT061
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: TSHD-JP003
     set_name: The Shining Darkness
