--- a/data/cards/06021033.yaml
+++ b/data/cards/06021033.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: BLCR-EN081
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: CSOC-DE043
     set_name: Crossroads of Chaos
@@ -72,6 +76,10 @@ sets:
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: BLCR-DE081
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: CSOC-FR043
     set_name: Crossroads of Chaos
@@ -82,6 +90,10 @@ sets:
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: BLCR-FR081
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: CSOC-IT043
     set_name: Crossroads of Chaos
@@ -92,6 +104,10 @@ sets:
     set_name: Duelist League 16 participation cards
     rarities:
     - Rare
+  - set_number: BLCR-IT081
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: DL16-PT011
     set_name: Duelist League 16 participation cards
@@ -101,6 +117,10 @@ sets:
     set_name: OTS Tournament Pack 10
     rarities:
     - Common
+  - set_number: BLCR-PT081
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: CSOC-JP043
     set_name: Crossroads of Chaos
