--- a/data/cards/09205573.yaml
+++ b/data/cards/09205573.yaml
@@ -60,30 +60,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN096
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: GEIM-DE015
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-DE096
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: GEIM-FR015
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-FR096
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: GEIM-IT015
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-IT096
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: GEIM-PT015
     set_name: Genesis Impact
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-PT096
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DBGI-JP015
     set_name: 'Deck Build Pack: Genesis Impactors'
