--- a/data/cards/17377751.yaml
+++ b/data/cards/17377751.yaml
@@ -52,6 +52,10 @@ series:
 - Blackwing
 sets:
   en:
+  - set_number: BLCR-EN063
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   - set_number: YF04-EN001
     set_name: Yu-Gi-Oh! 5D's Volume 4 promotional card
     rarities:
@@ -65,21 +69,37 @@ sets:
     set_name: 'The Dark Illusion: Special Edition'
     rarities:
     - Super Rare
+  - set_number: BLCR-DE063
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TDIL-FRSE1
     set_name: 'The Dark Illusion: Special Edition'
     rarities:
     - Super Rare
+  - set_number: BLCR-FR063
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TDIL-ITSE1
     set_name: 'The Dark Illusion: Special Edition'
     rarities:
     - Super Rare
+  - set_number: BLCR-IT063
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TDIL-PTSE1
     set_name: 'The Dark Illusion: Special Edition'
     rarities:
     - Super Rare
+  - set_number: BLCR-PT063
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: YF04-JP001
     set_name: Yu-Gi-Oh! 5D's Volume 4 promotional card
