--- a/data/cards/21250202.yaml
+++ b/data/cards/21250202.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: BLCR-EN074
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   - set_number: JUMP-EN079
     set_name: Weekly Shonen Jump January 2017 membership promotional card
     rarities:
@@ -78,21 +82,37 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: BLCR-DE074
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: LEDD-FRC04
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: BLCR-FR074
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: LEDD-ITC04
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: BLCR-IT074
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: LEDD-PTC04
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: BLCR-PT074
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: VJMP-JP114
     set_name: V Jump May 2016 promotional card
