--- a/data/cards/21770839.yaml
+++ b/data/cards/21770839.yaml
@@ -64,6 +64,30 @@ sets:
     set_name: Yu-Gi-Oh! ARC-V Volume 5 promotional card
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN075
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  de:
+  - set_number: BLCR-DE075
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLCR-FR075
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLCR-IT075
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLCR-PT075
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: YA05-JP001
     set_name: Yu-Gi-Oh! ARC-V Volume 5 promotional card
