--- a/data/cards/27548199.yaml
+++ b/data/cards/27548199.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLCR-EN083
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: SAST-DE037
     set_name: Savage Strike
@@ -69,6 +73,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLCR-DE083
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: SAST-FR037
     set_name: Savage Strike
@@ -78,6 +86,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLCR-FR083
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: SAST-IT037
     set_name: Savage Strike
@@ -87,6 +99,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLCR-IT083
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: SAST-PT037
     set_name: Savage Strike
@@ -96,6 +112,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLCR-PT083
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: SAST-JP037
     set_name: Savage Strike
