--- a/data/cards/28711704.yaml
+++ b/data/cards/28711704.yaml
@@ -50,30 +50,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN065
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: TOCH-DE001
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-DE065
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: TOCH-FR001
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-FR065
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: TOCH-IT001
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-IT065
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: TOCH-PT001
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-PT065
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: WPP1-JP001
     set_name: World Premiere Pack 2020
