--- a/data/cards/45627618.yaml
+++ b/data/cards/45627618.yaml
@@ -90,6 +90,10 @@ sets:
     set_name: Star Pack Battle Royal
     rarities:
     - Starfoil Rare
+  - set_number: BLCR-EN076
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CORE-DE051
     set_name: Clash of Rebellions
@@ -104,6 +108,10 @@ sets:
     set_name: Star Pack Battle Royal
     rarities:
     - Starfoil Rare
+  - set_number: BLCR-DE076
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CORE-FR051
     set_name: Clash of Rebellions
@@ -118,6 +126,10 @@ sets:
     set_name: Star Pack Battle Royal
     rarities:
     - Starfoil Rare
+  - set_number: BLCR-FR076
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CORE-IT051
     set_name: Clash of Rebellions
@@ -132,6 +144,10 @@ sets:
     set_name: Star Pack Battle Royal
     rarities:
     - Starfoil Rare
+  - set_number: BLCR-IT076
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CORE-PT051
     set_name: Clash of Rebellions
@@ -146,6 +162,10 @@ sets:
     set_name: Star Pack Battle Royal
     rarities:
     - Starfoil Rare
+  - set_number: BLCR-PT076
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CORE-JP051
     set_name: Clash of Rebellions
