--- a/data/cards/45819647.yaml
+++ b/data/cards/45819647.yaml
@@ -57,26 +57,46 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN092
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: DUOV-DE014
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE092
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: DUOV-FR014
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR092
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: DUOV-IT014
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT092
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: DUOV-PT014
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLCR-PT092
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: LVP3-JP036
     set_name: LINK VRAINS Pack 3
