--- a/data/cards/53871273.yaml
+++ b/data/cards/53871273.yaml
@@ -46,30 +46,50 @@ sets:
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-EN072
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TOCH-DE008
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-DE072
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TOCH-FR008
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-FR072
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TOCH-IT008
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-IT072
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TOCH-PT008
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-PT072
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: WPP1-JP013
     set_name: World Premiere Pack 2020
