--- a/data/cards/54082269.yaml
+++ b/data/cards/54082269.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLCR-EN064
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LED3-DE023
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -70,6 +74,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLCR-DE064
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LED3-FR023
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -79,6 +87,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLCR-FR064
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LED3-IT023
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -88,6 +100,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLCR-IT064
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED3-PT023
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -97,6 +113,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLCR-PT064
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP20-JP023
     set_name: 'Duelist Pack: Legend Duelist 3'
