--- a/data/cards/57314798.yaml
+++ b/data/cards/57314798.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN084
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: DRL3-DE021
     set_name: 'Dragons of Legend: Unleashed'
@@ -72,6 +76,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE084
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: DRL3-FR021
     set_name: 'Dragons of Legend: Unleashed'
@@ -81,6 +89,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR084
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: DRL3-IT021
     set_name: 'Dragons of Legend: Unleashed'
@@ -90,6 +102,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT084
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: DRL3-PT021
     set_name: 'Dragons of Legend: Unleashed'
@@ -99,6 +115,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: BLCR-PT084
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: CPF1-JP021
     set_name: 'Collectors Pack: Duelist of Flash Version'
