--- a/data/cards/61173621.yaml
+++ b/data/cards/61173621.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: BLCR-EN078
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CROS-DE013
     set_name: Crossed Souls
@@ -68,6 +72,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: BLCR-DE078
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CROS-FR013
     set_name: Crossed Souls
@@ -81,6 +89,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: BLCR-FR078
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CROS-IT013
     set_name: Crossed Souls
@@ -94,6 +106,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: BLCR-IT078
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CROS-PT013
     set_name: Crossed Souls
@@ -107,6 +123,10 @@ sets:
     set_name: Fusion Enforcers
     rarities:
     - Super Rare
+  - set_number: BLCR-PT078
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CROS-JP013
     set_name: Crossed Souls
