--- a/data/cards/80839052.yaml
+++ b/data/cards/80839052.yaml
@@ -49,26 +49,46 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Ultra Rare
+  - set_number: BLCR-EN080
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: ROTD-DE030
     set_name: Rise of the Duelist
     rarities:
     - Ultra Rare
+  - set_number: BLCR-DE080
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: ROTD-FR030
     set_name: Rise of the Duelist
     rarities:
     - Ultra Rare
+  - set_number: BLCR-FR080
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: ROTD-IT030
     set_name: Rise of the Duelist
     rarities:
     - Ultra Rare
+  - set_number: BLCR-IT080
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: ROTD-PT030
     set_name: Rise of the Duelist
     rarities:
     - Ultra Rare
+  - set_number: BLCR-PT080
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: ROTD-JP030
     set_name: Rise of the Duelist
