--- a/data/cards/90488465.yaml
+++ b/data/cards/90488465.yaml
@@ -49,30 +49,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN070
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: TOCH-DE006
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-DE070
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: TOCH-FR006
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-FR070
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: TOCH-IT006
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-IT070
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: TOCH-PT006
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-PT070
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: WPP1-JP011
     set_name: World Premiere Pack 2020
