--- a/data/cards/91420202.yaml
+++ b/data/cards/91420202.yaml
@@ -74,26 +74,46 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLCR-EN091
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLHR-DE045
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLCR-DE091
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLHR-FR045
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLCR-FR091
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLHR-IT045
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLCR-IT091
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLHR-PT045
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLCR-PT091
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP18-JP001
     set_name: Extra Pack 2018
