--- a/data/cards/91500017.yaml
+++ b/data/cards/91500017.yaml
@@ -44,30 +44,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN067
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: TOCH-DE003
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN067
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: TOCH-FR003
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-FR067
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: TOCH-IT003
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-EN067
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: TOCH-PT003
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLCR-PT067
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: WPP1-JP003
     set_name: World Premiere Pack 2020
