--- a/data/cards/99266988.yaml
+++ b/data/cards/99266988.yaml
@@ -44,30 +44,50 @@ sets:
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-EN073
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: TOCH-DE009
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-DE073
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: TOCH-FR009
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-FR073
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: TOCH-IT009
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-IT073
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: TOCH-PT009
     set_name: Toon Chaos
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: BLCR-PT073
+    set_name: 'Battles of Legend: Crystal Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: WPP1-JP014
     set_name: World Premiere Pack 2020
