--- a/data/cards/yugipedia906228.yaml
+++ b/data/cards/yugipedia906228.yaml
@@ -14,7 +14,9 @@ name:
   zh-TW:
   zh-CN:
 text:
-  en:
+  en: |-
+    2+ Level 4 monsters
+    You can detach 1 material from this card, then target 1 Normal Trap in your GY; place it on the bottom of the Deck, then draw 1 card. If a Normal Trap Card is activated: You can detach 1 material from a monster you control, and if you do, Special Summon 1 Level 4 monster from your hand. You can only use each effect of "Sacred Sheep Tree, Baromet" once per turn.
   de:
   es:
   fr:
@@ -30,6 +32,7 @@ attribute: EARTH
 rank: 4
 atk: 1900
 def: 2000
+materials: 2+ Level 4 monsters
 sets:
   ja:
   - set_number: VJMP-JP227
@@ -37,6 +40,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg:
   ocg: Not yet released
 yugipedia_page_id: 906228
