--- a/data/cards/35098357.yaml
+++ b/data/cards/35098357.yaml
@@ -12,7 +12,7 @@ name:
   ko: 위치크래프트 컨퓨전
   ko_rr: Wichikeuraepeuteu Keonpyujeon
   zh-TW:
-  zh-CN: 魔女术混乱融合
+  zh-CN: 魔女工艺・混乱结合
 text:
   en: |-
     Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as material, including a "Witchcrafter" monster. During your End Phase, if you control a "Witchcrafter" monster while this card is in your GY: You can add this card to your hand. You can only use 1 "Witchcrafter Confusion Confession" effect per turn, and only once that turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신의 패 / 필드에서, 융합 몬스터 카드에 기재된, "위치크래프트" 몬스터를 포함하는 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다. ②: 이 카드가 묘지에 존재하고, 자신 필드에 "위치크래프트" 몬스터가 존재할 경우, 자신 엔드 페이즈에 발동할 수 있다. 이 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。
-    ①：从自己的手卡·场上把融合怪兽卡决定的包含「魔女术」怪兽的融合素材怪兽送去墓地，把那1只融合怪兽从额外卡组融合召唤。
-    ②：这张卡在墓地存在，自己场上有「魔女术」怪兽存在的场合，自己结束阶段才能发动。这张卡加入手卡。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：从自己的手牌・场上，将由融合怪兽卡决定的、包含"魔女工艺"怪兽在内的融合素材怪兽送至墓地，从额外牌组将1只该融合怪兽融合召唤。②：此卡存在于墓地，自己场上有"魔女工艺"怪兽存在的情况下，在自己的结束阶段可以发动。将此卡加入手牌。
 card_type: Spell
 property: Normal
 series:
@@ -84,6 +82,11 @@ sets:
     set_name: Secret Shiny Box
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC070
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
