--- a/data/cards/05368615.yaml
+++ b/data/cards/05368615.yaml
@@ -6,7 +6,7 @@ name:
   es: Steam Gyroid
   fr: Steam Gyroid
   it: Steam Gyroid
-  pt: Steam Gyroid
+  pt: Giroide a Vapor
   ja: スチームジャイロイド
   ja_romaji: Suchīmujairoido
   ko: 스팀자이로이드
@@ -17,7 +17,7 @@ text:
   en: |-
     "Gyroid" + "Steamroid"
   de: |-
-    "Gyroid" + "Steamroid"
+    „Gyroid“ + „Steamroid“
   es: |-
     "Gyroid" + "Steamroid"
   fr: |-
@@ -25,11 +25,11 @@ text:
   it: |-
     "Gyroid" + "Steamroid"
   pt: |-
-    "Gyroid" + "Steamroid"
+    "Giroide" + "Vaporoide"
   ja: |-
-    "「ジャイロイド」" ＋ "「スチームロイド」"
+    「ジャイロイド」＋「スチームロイド」
   ko: |-
-    "자이로이드" + "스팀로이드"
+    "자이로이드" ＋ "스팀로이드"
   zh-TW:
   zh-CN: |-
     「旋翼机人」＋「蒸汽机人」。
