--- a/data/cards/19024706.yaml
+++ b/data/cards/19024706.yaml
@@ -6,7 +6,7 @@ name:
   es: Contraataque de Héroe
   fr: Contre-Attaque des Héros
   it: Contrattacco dell'Eroe
-  pt:
+  pt: Contra-Ataque de Herói
   ja: ヒーロー<ruby>逆<rt>ぎゃく</rt></ruby><ruby>襲<rt>しゅう</rt></ruby>
   ja_romaji: Hīrō Gyakushū
   ko: 히어로 역습
@@ -25,7 +25,7 @@ text:
   it: |-
     Quando un mostro "EROE Elementale" che controlli viene distrutto in battaglia: il tuo avversario seleziona e rivela 1 carta a caso dalla tua mano, poi se essa è un mostro "EROE Elementale", distruggi 1 mostro controllato dal tuo avversario, poi Evoca Specialmente il mostro selezionato.
   pt: |-
-    Ative somente quando um monstro "Elemental Hero" no seu lado do campo é destruído em batalha. Seu oponente seleciona aleatoriamente 1 carta sua mão. Se a carta selecionada é um "Elemental Hero", destrói 1 monstro no lado do campo do seu oponente e Special Summon o monstro selecionado para o seu lado campo.
+    Quando um monstro "HERÓI do Elemento" que você controla for destruído em batalha: seu oponente seleciona 1 card aleatório da sua mão e, depois, se for um monstro "HERÓI do Elemento", você destrói 1 monstro que seu oponente controla e, se isso acontecer, Invoque o monstro selecionado por Invocação-Especial.
   ja: |-
     自分フィールド上に存在する「E・HERO」と名のついたモンスターが戦闘によって破壊された時に発動する事ができる。自分の手札から相手はカード１枚をランダムに選択する。それが「E・HERO」と名のついたモンスターカードだった場合、相手フィールド上のモンスター１体を破壊し、選択したカードを自分フィールド上に特殊召喚する。
   ko: |-
