--- a/data/cards/26647858.yaml
+++ b/data/cards/26647858.yaml
@@ -6,7 +6,7 @@ name:
   es: Anillo del Héroe
   fr: Anneau du Héros
   it: Annello dell'Eroe
-  pt: Anel de Herói
+  pt: Anel do Herói
   ja: ヒーロー・ヘイロー
   ja_romaji: Hīrō Heirō
   ko: 히어로 헤이로
@@ -25,7 +25,7 @@ text:
   it: |-
     Scegli come bersaglio 1 mostro di Tipo Guerriero con ATK di 1500 o inferiore; equipaggia questa carta a quel bersaglio. I mostri controllati dal tuo avversario con ATK di 1900 o superiore non possono attaccare quel bersaglio.
   pt: |-
-    Depois da ativação, esta carta é tratada como uma carta Equip. Equipa esta carta com 1 monstro Warrior-Type que tenha o ATK de 1500 ou menos. Monstros do oponente que tenha 1900 ou mais de ATK não pode atacar o monstro equipado com esta carta.
+    Escolha 1 monstro Guerreiro no campo com 1500 ou menos de ATK; equipe este card no alvo. Monstros que seu oponente controla com 1900 ou mais de ATK não podem atacar o monstro equipado.
   ja: |-
     発動後このカードは装備カードとなり、攻撃力１５００以下の戦士族モンスター１体に装備する。相手の攻撃力１９００以上のモンスターは、装備モンスターを攻撃する事ができない。
   ko: |-
