--- a/data/cards/29343734.yaml
+++ b/data/cards/29343734.yaml
@@ -6,7 +6,7 @@ name:
   es: HÉROE Elemental Electrum
   fr: Électrum, HÉROS Élémentaire
   it: Electrum EROE Elementale
-  pt:
+  pt: Eletro, o HERÓI do Elemento
   ja: <ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> エリクシーラー
   ja_romaji: Erementaru Hīrō Erikushīrā
   ko: 엘리멘틀 히어로 에릭실러
@@ -29,7 +29,9 @@ text:
   it: |-
     "Avian EROE Elementale" + "Burstinatrix EROE Elementale" + "Clayman EROE Elementale" + "Bubbleman EROE Elementale"
     Deve essere Evocato tramite Fusione e non può essere Evocato Specialmente in altri modi. Mentre è scoperta sul Terreno, questa carta ha anche Attributo VENTO, ACQUA, FUOCO e TERRA. Quando questa carta viene Evocata tramite Fusione: mischia tutte le carte bandite nei Deck. Questa carta guadagna 300 ATK per ogni mostro controllato dal tuo avversario che condivide un Attributo con questa carta.
-  pt:
+  pt: |-
+    "Aviário, o HERÓI do Elemento" + "Burstinatrix, o HERÓI do Elemento" + "Clayman, o HERÓI do Elemento" + "Homem Bolha, o HERÓI do Elemento"
+    Deve ser Invocado por Invocação-Fusão. Enquanto estiver com a face para cima no campo, este card também é dos Atributos VENTO, ÁGUA, FOGO e TERRA. Quando este card for Invocado por Invocação-Fusão: embaralhe todos os cards banidos no(s) Deck(s). Ganha 300 de ATK para cada monstro que seu oponente controla com o mesmo Atributo que o deste card.
   ja: |-
     「Ｅ・ＨＥＲＯ フェザーマン」＋「Ｅ・ＨＥＲＯ バーストレディ」＋「Ｅ・ＨＥＲＯ クレイマン」＋「Ｅ・ＨＥＲＯ バブルマン」
     このモンスターは融合召喚でしか特殊召喚できない。このカードの属性は「風」「水」「炎」「地」としても扱う。このカードが融合召喚に成功した時、ゲームから除外された全てのカードを持ち主のデッキに戻し、デッキをシャッフルする。相手フィールド上に存在するこのカードと同じ属性のモンスター１体につき、このカードの攻撃力は３００ポイントアップする。
