--- a/data/cards/32752319.yaml
+++ b/data/cards/32752319.yaml
@@ -6,7 +6,7 @@ name:
   es: Luchador UFOroid
   fr: Guerrier UFOroid
   it: Guerriero UFOroid
-  pt: Lutador UFOroid
+  pt: Lutador UFOroide
   ja: ユーフォロイド・ファイター
   ja_romaji: Yūforoido Faitā
   ko: 유에프오로이드 파이터
