--- a/data/cards/45945685.yaml
+++ b/data/cards/45945685.yaml
@@ -6,7 +6,7 @@ name:
   es: Cycroid
   fr: Cycroid
   it: Cycroid
-  pt: Cycroid
+  pt: Cycroide
   ja: サイクロイド
   ja_romaji: Saikuroido
   ko: 싸이크로이드
