--- a/data/cards/47596607.yaml
+++ b/data/cards/47596607.yaml
@@ -6,7 +6,7 @@ name:
   es: Rascacielos 2 - Ciudad de Héroes
   fr: Gratte-Ciel 2 - Ville du Héros
   it: Grattacielo 2 - La Città degli Eroi
-  pt: Arranha-Céu 2 - A Cidade do Herói
+  pt: Arranha-Céu 2 - Cidade de Heróis
   ja: <ruby>摩<rt>ま</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>楼<rt>ろう</rt></ruby>２－ヒーローシティ
   ja_romaji: Matenrō Tsū - Hīrō Shiti
   ko: 마천루2－히어로 시티
@@ -25,7 +25,7 @@ text:
   it: |-
     Una volta per turno, durante la tua Main Phase, se controlli questa carta: puoi scegliere come bersaglio 1 mostro "EROE Elementale" nel tuo Cimitero che è stato distrutto in battaglia; Evoca Specialmente quel bersaglio.
   pt: |-
-    Uma vez por turno, durante sua Main Phase, você pode Invocar Especialmente um "Elemental Hero" monstro do seu cemitério que foi destruído por batalha. (Somente o controlador deste card pode usar este efeito).
+    Uma vez por turno, durante sua Fase Principal, se você controlar este card: você pode escolher 1 monstro "HERÓI do Elemento" no seu Cemitério que foi destruído em batalha e enviado para lá; Invoque o alvo por Invocação-Especial.
   ja: |-
     １ターンに１度、自分のメインフェイズ時に、戦闘によって破壊され自分の墓地へ送られた「Ｅ・ＨＥＲＯ」と名のついたモンスター１体を選択して発動できる。選択したモンスターを墓地から特殊召喚する。
   ko: |-
