--- a/data/cards/55428811.yaml
+++ b/data/cards/55428811.yaml
@@ -6,7 +6,7 @@ name:
   es: Esperanza de Cinco
   fr: Espoir des Cinq
   it: Quinta Speranza
-  pt: A Quinta Esperança
+  pt: Quinta Esperança
   ja: ホープ・オブ・フィフス
   ja_romaji: Hōpu Obu Fifusu
   ko: 다섯 번째 희망
@@ -25,7 +25,7 @@ text:
   it: |-
     Scegli come bersaglio 5 carte "EROE Elementale" nel tuo Cimitero; mischiale nel Deck, poi pesca 2 carte (pesca invece 3 carte se non avevi altre carte sul tuo Terreno e in mano quando hai attivato questa carta).
   pt: |-
-    Selecione 5 cartas com "Elemental Hero" no nome do seu Cemitério e embaralhe-as no seu Deck. Depois disso, compre duas cartas. Se esta carta é ativada quando não existem cartas no seu lado do campo e você não tem cartas na mão, compre 3 cartas em vez disso.
+    Escolha 5 cards "HERÓI do Elemento" no seu Cemitério; embaralhe-os no Deck e, depois, compre 2 cards ou, em vez disso, compre 3 cards se você não tinha outros cards no seu campo e na sua mão quando você ativou este card.
   ja: |-
     自分の墓地の「Ｅ・ＨＥＲＯ」と名のついたカード５枚を選択し、デッキに加えてシャッフルする。その後、デッキからカードを２枚ドローする。このカードの発動時に自分の手札・フィールド上に他のカードが存在しない場合はカードを３枚ドローする。
   ko: |-
