--- a/data/cards/81003500.yaml
+++ b/data/cards/81003500.yaml
@@ -6,7 +6,7 @@ name:
   es: HÉROE Elemental Necroid Shaman
   fr: Chaman Nécroïde, HÉROS Élémentaire
   it: Necroid-Sciamano EROE Elementale
-  pt: Heroi Elementar Xamã Necróide
+  pt: Xamã Necroide, o HERÓI do Elemento
   ja: <ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> ネクロイド・シャーマン
   ja_romaji: Erementaru Hīrō Nekuroido Shāman
   ko: 엘리멘틀 히어로 네크로이드 샤먼
@@ -30,8 +30,8 @@ text:
     "Wildheart EROE Elementale" + "Necro-Ombra EROE Elementale"
     Deve essere Evocato tramite Fusione e non può essere Evocato Specialmente in altri modi. Quando questa carta viene Evocata Specialmente: scegli come bersaglio 1 mostro controllato dal tuo avversario; distruggi quel bersaglio, poi Evoca Specialmente 1 mostro dal Cimitero del tuo avversario sul suo Terreno.
   pt: |-
-    "Elemental HERO Wildheart" + "Elemental HERO Necroshade"
-    Esta carta não pode ser Special Summoned, exceto por Fusion Summon. Quando esta carta é Special Summoned, destrua 1 monstro que o seu oponente controla. Depois disso, selecione 1 monstro no Cemitério do seu oponente e o Special Summon para o lado do campo dele.
+    "Coração Selvagem, o HERÓI do Elemento" + "Necrosombra, o HERÓI do Elemento"
+    Deve ser Invocado por Invocação-Fusão. Se este card for Invocado por Invocação-Especial: escolha 1 monstro que seu oponente controla; destrua o alvo e, depois, Invoque por Invocação-Especial 1 monstro do Cemitério do seu oponente no campo dele.
   ja: |-
     「Ｅ・ＨＥＲＯ ワイルドマン」＋「Ｅ・ＨＥＲＯ ネクロダークマン」
     このカードは融合召喚でしか特殊召喚できない。①：このカードが特殊召喚に成功した場合、相手フィールドのモンスター１体を対象として発動する。その相手モンスターを破壊する。その後、相手の墓地からモンスター１体を選び、相手フィールドに特殊召喚する。
