--- a/data/cards/83121692.yaml
+++ b/data/cards/83121692.yaml
@@ -6,7 +6,7 @@ name:
   es: HÉROE Elemental Tempest
   fr: Tempête, HÉROS Élémentaire
   it: Tempesta EROE Elementale
-  pt:
+  pt: Temporal, o HERÓI do Elemento
   ja: <ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> テンペスター
   ja_romaji: Erementaru Hīrō Tenpesutā
   ko: 엘리멘틀 히어로 템페스터
@@ -29,7 +29,9 @@ text:
   it: |-
     "Avian EROE Elementale" + "Sparkman EROE Elementale" + "Bubbleman EROE Elementale"
     Deve essere Evocato tramite Fusione e non può essere Evocato Specialmente in altri modi. Puoi mandare 1 altra carta che controlli al Cimitero per scegliere come bersaglio 1 mostro che controlli; mentre questa carta è scoperta sul Terreno, quel mostro non può essere distrutto in battaglia.
-  pt:
+  pt: |-
+    "Aviário, o HERÓI do Elemento" + "Sparkman, o HERÓI do Elemento" + "Homem Bolha, o HERÓI do Elemento"
+    Deve ser Invocado por Invocação-Fusão. Você pode enviar 1 outro card que você controla para o Cemitério e, depois, escolha 1 monstro que você controla; enquanto este card estiver com a face para cima no campo, esse monstro não pode ser destruído em batalha.
   ja: |-
     「<ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> フェザーマン」＋「<ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> スパークマン」＋「<ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> バブルマン」
     このモンスターは融合召喚でしか特殊召喚できない。このカード以外の自分フィールド上のカード１枚を墓地に送り、自分フィールド上のモンスター１体を選択する。このカードがフィールド上に表側表示で存在する限り、選択したモンスターは戦闘によっては破壊されない。(ダメージ計算は適用する)
