--- a/data/cards/yugipedia906228.yaml
+++ b/data/cards/yugipedia906228.yaml
@@ -32,7 +32,7 @@ attribute: EARTH
 rank: 4
 atk: 1900
 def: 2000
-materials: 2+ Level 4 monsters
+materials: 2 or more Level 4 monsters
 sets:
   ja:
   - set_number: VJMP-JP227
