--- a/data/cards/10352095.yaml
+++ b/data/cards/10352095.yaml
@@ -4,9 +4,9 @@ name:
   en: Scroll of Bewitchment
   de: Zauberschriftrolle
   es: Pergamino de Hechizar
-  fr: Parchemin d’Ensorcellement
+  fr: Parchemin d'Ensorcellement
   it: Pergamena della Malia
-  pt:
+  pt: Pergaminho do Feitiço
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>惑<rt>わく</rt></ruby>の<ruby>巻<rt>まき</rt></ruby><ruby>物<rt>もの</rt></ruby>
   ja_romaji: Genwaku no Makimono
   ko: 현혹의 두루마리
@@ -17,15 +17,15 @@ text:
   en: |-
     Activate this card by declaring 1 Attribute; the equipped monster becomes that Attribute.
   de: |-
-    Wähle 1 Eigentschaft, wenn du diese Karte aktivierst. Ändere die Eigentschaft des Monsters, das mit dieser Karte ausgerüstet wird, in die gewählte Eigentschaft.
+    Wähle 1 Eigenschaft. Ändere die Eigenschaft des Monsters, das mit dieser Karte ausgerüstet wird, in die gewählte Eigenschaft.
   es: |-
     Selecciona 1 Atributo. Cambia el Atributo del monstruo equipado al que has seleccionado.
   fr: |-
     Sélectionnez 1 Attribut lorsque vous Activez cette carte. Changez l'Attribut du monstre équipé par celui que vous avez sélectionné.
   it: |-
-    Seleziona 1 Attributo quando attivi questa carta. Cambia l'Attributo del Mostro equipaggiato con quello da te selezionato.
+    Seleziona 1 Attributo quando attivi questa carta. Cambia l'Attributo del mostro equipaggiato con quello da te selezionato.
   pt: |-
-    Selecione 1 Atributo. O Atributo do monstro equipado agora é tratado como o Atributo selecionado.
+    Ative este card ao declarar 1 Atributo; o monstro equipado se torna desse Atributo.
   ja: |-
     属性を１つ宣言して発動する。装備モンスターの属性は宣言した属性になる。
   ko: |-
