--- a/data/cards/36256625.yaml
+++ b/data/cards/36256625.yaml
@@ -6,7 +6,7 @@ name:
   es: Súper Vehicroid Taladro Gigante
   fr: Super Véhicroid Méga-Foreur
   it: Super Vehicroid Jumbo Drill
-  pt:
+  pt: Super Veicroide Perfuratriz Gigante
   ja: スーパービークロイド－ジャンボドリル
   ja_romaji: Sūpā Bīkuroido - Jambo Doriru
   ko: 슈퍼 비크로이드 점보 드릴
@@ -29,7 +29,9 @@ text:
   it: |-
     "Steamroid" + "Drillroid" + "Submarineroid"
     L'Evocazione per Fusione di questa carta può essere effettuata solo con i Mostri Materiale da Fusione sopra riportati. Durante un combattimento tra questa carta attaccante ed un mostro in Posizione di Difesa il cui DEF sia inferiore all'ATK di questa carta, infliggi la differenza ai Life Points del tuo avversario come danno da combattimento.
-  pt:
+  pt: |-
+    "Vaporoide" + "Perfuroide" + "Submariroide"
+    A Invocação-Fusão deste card só pode ser feita com as Matérias de Fusão acima. Se este card atacar um monstro em Posição de Defesa, cause dano de batalha perfurante.
   ja: |-
     「スチームロイド」＋「ドリルロイド」＋「サブマリンロイド」
     このカードの融合召喚は上記のカードでしか行えない。このカードが守備表示モンスターを攻撃した時、その守備力を攻撃力が超えていれば、その数値だけ相手ライフに戦闘ダメージを与える。
