--- a/data/cards/36378213.yaml
+++ b/data/cards/36378213.yaml
@@ -6,7 +6,7 @@ name:
   es: Ambulanceroid
   fr: Ambulanceroid
   it: Ambulanceroid
-  pt:
+  pt: Ambulânciroide
   ja: キューキューロイド
   ja_romaji: Kyūkyūroido
   ko: 구급로이드
@@ -24,7 +24,8 @@ text:
     Lorsqu'un monstre qui inclut "roid" dans son nom de carte est ajouté à votre main depuis votre Cimetière, vous pouvez faire l'invocation Spéciale de ce monstre.
   it: |-
     Quando un mostro che include "roid" nel suo nome viene aggiunto dal tuo Cimitero alla tua mano, puoi Evocare tramite Evocazione Speciale quel mostro.
-  pt:
+  pt: |-
+    Quando um ou mais monstros "roide" forem adicionados do seu Cemitério à sua mão (exceto durante a Etapa de Dano): você pode Invocá-lo por Invocação-Especial.
   ja: |-
     「ロイド」と名のついたモンスターが自分の墓地から手札に加わった時、そのモンスターを特殊召喚する事ができる。
   ko: |-
