--- a/data/cards/98927491.yaml
+++ b/data/cards/98927491.yaml
@@ -6,7 +6,7 @@ name:
   es: Rescueroid Ambulancia
   fr: Ambulance Sauveteuroid
   it: Rescueroid Ambulanza
-  pt:
+  pt: Ambulância Resgateroide
   ja: レスキューキューロイド
   ja_romaji: Resukyūkyūroido
   ko: 구조 구급로이드
@@ -29,7 +29,9 @@ text:
   it: |-
     "Rescueroid" + "Ambulanceroid"
     Questo mostro non può essere Evocato tramite Evocazione Speciale se non tramite Evocazione per Fusione. Quando un mostro sul tuo Terreno viene distrutto in seguito ad una battaglia e mandato al Cimitero, puoi Evocare tramite Evocazione Speciale quel mostro in Posizione di Difesa. Puoi usare questo effetto solo una volta per turno.
-  pt:
+  pt: |-
+    "Resgateroide" + "Ambulânciroide"
+    Deve ser Invocado por Invocação-Fusão. Uma vez por turno, quando um monstro que você controla for destruído em batalha e enviado para o Cemitério: você pode Invocar esse monstro por Invocação-Especial em Posição de Defesa.
   ja: |-
     「レスキューロイド」＋「キューキューロイド」
     このモンスターは融合召喚でしか特殊召喚できない。自分フィールド上に存在するモンスターが戦闘によって破壊され墓地へ送られた時、そのモンスターを守備表示で特殊召喚する事ができる。この効果は１ターンに１度しか使用できない。
