--- a/data/cards/07392745.yaml
+++ b/data/cards/07392745.yaml
@@ -8,7 +8,7 @@ name:
   it: Ossomasticatore
   pt: Mascaosso
   ja: チュウボーン
-  ja_romaji: Chūbōn
+  ja_romaji: Chuubōn
   ko: 츄 본
   ko_rr:
   zh-TW: 鼠骨
