--- a/data/cards/10925955.yaml
+++ b/data/cards/10925955.yaml
@@ -12,7 +12,7 @@ name:
   ko: 의수경과의 교신
   ko_rr:
   zh-TW:
-  zh-CN: 与仪水镜的交信
+  zh-CN: 与仪水镜之交讯
 text:
   en: |-
     If you control a face-up WATER monster, activate 1 of these effects. If you control a face-up WATER Ritual Monster, you can activate both of these effects:
@@ -41,7 +41,9 @@ text:
     자신 필드 위에 물 속성 몬스터가 앞면 표시로 존재할 경우, 이하의 효과에서 1개를 선택하고 발동한다. 자신 필드 위에 물 속성의 의식 몬스터가 앞면 표시로 존재할 경우, 양쪽을 선택하고 발동할 수 있다. ●상대의 마법＆함정 카드 존에 세트되어 있는 카드를 전부 확인하고, 원래대로 되돌린다. ●자신 또는 상대의 덱 위에서 카드를 2장 확인하고, 좋아하는 순서대로 덱의 위로 되돌린다.
   zh-TW:
   zh-CN: |-
-    自己场上有水属性怪兽表侧表示存在的场合，从以下效果选择1个发动。自己场上有水属性的仪式怪兽表侧表示存在的场合，可以选择两方发动。●把对方的魔法与陷阱卡区域盖放的卡全部确认再回到原状。●从自己或者对方的卡组上面把2张卡确认，用喜欢的顺序回到卡组上面。
+    ①：自己场上有水属性怪兽存在的情况下，可从以下效果中选择1个发动。此卡发动时自己场上有水属性仪式怪兽存在的情况下，以下两个效果均可选择。
+    ●确认所有被放置在对手的魔法与陷阱区域的卡。
+    ●从自己或对手牌组上面确认2张卡，以喜欢的顺序放回牌组上面。
 card_type: Spell
 property: Normal
 series:
@@ -77,6 +79,11 @@ sets:
     set_name: Extreme Victory
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC094
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
